<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModeSelectionFragment"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    tools:layout_gravity="center" >

    <TextView
        android:id="@+id/textView_titleModeSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/seleccion_de_modo"
        android:fontFamily="sans-serif-black"
        android:textColor="#039BE5"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_instruccionesModoJuego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruccionesModoJuego"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_titleModeSelection" />

    <TextView
        android:id="@+id/textView_cronometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/modo_con_cronometro"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_instruccionesModoJuego" />

    <Button
        android:id="@+id/button_basico_reloj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basico"
        app:layout_constraintEnd_toStartOf="@id/button_avanzado_reloj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cronometro"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button_avanzado_reloj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en_contexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_basico_reloj"
        app:layout_constraintTop_toBottomOf="@+id/textView_cronometro"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView_libre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/modo_libre"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_avanzado_reloj" />

    <Button
        android:id="@+id/button_basico_libre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basico"
        app:layout_constraintEnd_toStartOf="@id/button_avanzado_libre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_libre"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_avanzado_libre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en_contexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_basico_libre"
        app:layout_constraintTop_toBottomOf="@+id/textView_libre"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>